# esp-reader

./: .gitignore  README.md  sdkconfig  sdkconfig.old
include/esp32-waveshare-epd/: EPD.h  GUI_Paint.cpp
include/esp32-waveshare-epd/utility/: Debug.h  EPD_7in5_V2.cpp  EPD_7in5_V2.h
main/: CMakeLists.txt  Paper.cpp  Paper.hpp  main.cpp
